--- a/readMe
+++ b/readMe
@@ -7,3 +7,21 @@ JavaFX code
 updates the wireFrame
 
 worked on it for 6 hours
+
+All the work done on this file is from Erik taylor.
+
+Files included:
+  Candy.class
+  Chip.class
+  Dispenser.class
+  Drink.class
+  Gum.class
+  Money.class
+  Product.class
+  Snack.class
+  VMachine.class
+  Vending machine UML
+  Vendor.class
+  userFlowChart.png - flow chart for program run for user interaction
+  vendorFlowChart.png - flow chart for program run for vendor interaction
+  wireframe1.png - a wireframe of the front of the vending machine
